# July_AI

./: .gitignore  AGENTS.md  July_GPT.txt  MCP_SETUP.md  PROJECT_PROTOCOL.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
.roo/: mcp.json
july/: __init__.py  cli.py  cockpit.py  config.py  db.py  mcp.py  models.py  pipeline.py  project_conversation.py  ui.py
july/templates/: project.html
tests/: test_cockpit_ui.py  test_project_conversation.py  test_sessions.py
